# hello-esp32

./: .gitignore  Cargo.toml  README.md  run-release.cmd  run.cmd  sdkconfig.defaults
src/: main.rs  netcfg.rs  nvs.rs
