[package]
name = "hello-esp32"
version = "0.1.0"
authors = ["JiaYe <planet2@qq.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-svc = "0.42.3"
esp-idf-hal = "0.38.1"
# esp-idf-ble = { git = "https://github.com/pyaillet/esp-idf-ble" }
esp-idf-ble = { git = "https://github.com/planet0104/esp-idf-ble" }
embedded-hal = "1.0.0-alpha.8"
embedded-svc = "0.22.1"
anyhow = "1"
serde = "1.0.145"
serde_json = "1.0.85"
log = "0.4.17"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
